base/deployment.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: demo-http-route
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "demo.thdlabs.io"
  rules:
    - backendRefs:
        - name: demo-stable-service
          port: 80
        - name: demo-canary-service
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: demo
---
apiVersion: v1
kind: Service
metadata:
  name: demo-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: demo
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo
spec:
  replicas: 5
  strategy:
    canary:

      canaryService: demo-canary-service # our created canary service
      stableService: demo-stable-service # our created stable service

      maxUnavailable: 1

      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: demo-http-route # our created httproute
            namespace: default # namespace where this rollout resides.
      steps:
        - setWeight: 10
        - pause: { duration: 60 }
        - setWeight: 20
        - pause: { duration: 60 }
        - setWeight: 30
        - pause: { duration: 60 }
        - setWeight: 40
        - pause: { duration: 60 }
        - setWeight: 50
        - pause: { duration: 60 }
        - setWeight: 60
        - pause: { duration: 60 }
        - setWeight: 70
        - pause: { duration: 60 }
        - setWeight: 80
        - pause: { duration: 60 }
        - setWeight: 90
        - pause: { duration: 60 }
        - setWeight: 100

  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
